Add initial bits for gpiod backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,8 @@ add_library(gpio STATIC lib/gpio.cpp)
 
 install(TARGETS gpio DESTINATION lib)
 install(DIRECTORY include/ DESTINATION include)
+
+option(BUILD_GPIOD "Build gpiod backend library" ON)
+if(BUILD_GPIOD)
+    add_subdirectory(gpiod)
+endif(BUILD_GPIOD)
