--- a/gpiod/CMakeLists.txt
+++ b/gpiod/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 include_directories(.. ../include)
-set(gpiod_SOURCES gpiod_chip.cpp)
+set(gpiod_SOURCES gpiod_chip.cpp gpiod_pin.cpp)
 set(posix_SOURCES ../posix/error.cpp ../posix/resource.cpp)
 
 add_library(gpio-gpiod SHARED ${gpiod_SOURCES} ${posix_SOURCES})
