--- a/gpiod/CMakeLists.txt
+++ b/gpiod/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(gpio-gpiod VERSION 1.0)
+project(gpio++-gpiod VERSION 1.0)
 
 set(CMAKE_BUILD_TYPE Release)
 
@@ -15,11 +15,11 @@ set(gpiod_SOURCES gpiod_chip.cpp gpiod_pin.cpp)
 set(posix_HEADERS ../posix/error.hpp ../posix/resource.hpp)
 set(posix_SOURCES ../posix/error.cpp ../posix/resource.cpp)
 
-add_library(gpio-gpiod SHARED
+add_library(gpio++-gpiod SHARED
     ${gpiod_HEADERS} ${gpiod_SOURCES}
     ${posix_HEADERS} ${posix_SOURCES}
 )
 
-install(TARGETS gpio-gpiod DESTINATION lib)
-set_target_properties(gpio-gpiod PROPERTIES VERSION ${PROJECT_VERSION})
-set_target_properties(gpio-gpiod PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR})
+install(TARGETS gpio++-gpiod DESTINATION lib)
+set_target_properties(gpio++-gpiod PROPERTIES VERSION ${PROJECT_VERSION})
+set_target_properties(gpio++-gpiod PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR})
