README.md: add installation and compilation instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,9 @@ set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 
 set(CPACK_GENERATOR DEB)
 set(CPACK_STRIP_FILES ON)
+set(CPACK_PACKAGE_FILE_NAME
+    ${PROJECT_NAME}_${PROJECT_VERSION}_${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR}
+)
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dimitry Ishenko <dimitry (dot) ishenko (at) (gee) mail (dot) com>")
 
 set(CPACK_SOURCE_GENERATOR ZIP)
