--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 include_directories(../include)
 
-set(HEADERS chip_base.hpp pin_base.hpp)
-set(SOURCES chip_base.cpp pin_base.cpp)
+set(HEADERS chip_base.hpp pin_base.hpp posix/error.hpp)
+set(SOURCES chip_base.cpp pin_base.cpp posix/error.cpp)
 
 add_library(gpio++-util OBJECT ${HEADERS} ${SOURCES})
 
