Update CMakeLists.txt files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.1)
 project(gpio++ VERSION 1.0)
 
-set(CMAKE_BUILD_TYPE Release)
-
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+add_definitions(-DASIO_STANDALONE)
 
 include_directories(include)
 
@@ -16,14 +16,9 @@ set(HEADERS
     include/gpio++/types.hpp
 )
 set(SOURCES lib/gpio.cpp)
+set(FILES LICENSE.md README.md)
 
-add_definitions(-DASIO_STANDALONE)
-add_library(gpio++ STATIC ${HEADERS} ${SOURCES})
-
-install(TARGETS gpio++ DESTINATION lib)
-install(DIRECTORY include/ DESTINATION include)
-
-########################
+# sub-project(s)
 add_subdirectory(util)
 set_property(TARGET gpio++-util PROPERTY POSITION_INDEPENDENT_CODE ON)
 
@@ -33,18 +28,30 @@ if(BUILD_GPIOD)
 endif(BUILD_GPIOD)
 
 ########################
-set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
+# static library
+add_library(gpio++ STATIC ${HEADERS} ${SOURCES})
 
-set(CPACK_GENERATOR DEB)
+# install
+install(TARGETS gpio++ DESTINATION lib)
+install(DIRECTORY include/ DESTINATION include)
+install(FILES ${FILES} DESTINATION share/doc/${PROJECT_NAME})
+
+########################
+# package
+set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_STRIP_FILES ON)
 set(CPACK_PACKAGE_FILE_NAME
     ${PROJECT_NAME}_${PROJECT_VERSION}_${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR}
 )
+
+# source
+set(CPACK_SOURCE_GENERATOR TBZ2)
+set(CPACK_SOURCE_IGNORE_FILES /\.git.*;/build/;\.user$)
+
+# binary
+set(CPACK_GENERATOR DEB)
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "C++ GPIO Library for Linux")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Dimitry Ishenko <dimitry (dot) ishenko (at) (gee) mail (dot) com>")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libasio-dev (>= 1:1.10.10-1)")
-
-set(CPACK_SOURCE_GENERATOR ZIP)
-set(CPACK_SOURCE_IGNORE_FILES /\.git.*;/build/;\.user$)
 
 include(CPack)
