Correctly install in lib64

--- a/generic/CMakeLists.txt
+++ b/generic/CMakeLists.txt
@@ -19,6 +19,6 @@ add_library(gpio++ SHARED
 )
 
 # install
-install(TARGETS gpio++ DESTINATION lib)
+install(TARGETS gpio++ DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
 set_target_properties(gpio++ PROPERTIES VERSION ${PROJECT_VERSION})
 set_target_properties(gpio++ PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR})
