Only provide option BUILD_PIGPIO on ARM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,12 @@ set_property(TARGET gpio++-base PROPERTY POSITION_INDEPENDENT_CODE ON)
 # build generic backend
 add_subdirectory(generic)
 
-option(BUILD_PIGPIO "Build pigpio backend" ON)
-if(BUILD_PIGPIO)
-    add_subdirectory(pigpio)
-endif(BUILD_PIGPIO)
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "^(arm|aarch64)")
+    option(BUILD_PIGPIO "Build pigpio backend" ON)
+    if(BUILD_PIGPIO)
+        add_subdirectory(pigpio)
+    endif()
+endif()
 
 ########################
 # install
